--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "unicompile",
-  "version": "2.2.4",
+  "version": "2.2.5",
   "description": "One compiler to compile it all. A tool primarily created for Drupal themes and modules to compile SASS and ES6+ Javascript into ES5 based on a configuration file.",
   "bin": {
     "unicompile": "./bin/unicompile.js"
@@ -17,6 +17,7 @@
     "glob-promise": "^3.4.0",
     "mkdirp": "^0.5.1",
     "node-sass": "^4.13.0",
+    "node-sass-export": "^0.0.7",
     "node-sass-promise": "^1.0.0",
     "path": "^0.12.7",
     "postcss": "^7.0.26",
